--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "banco-de-dados---e-commerce",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.1.0",
+  "description": "Current state: Addresses, Clients, Products, and Comments available, routes not properly documented in text file, still to be done",
+  "main": "__dirname",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["back-end", "sequelize-db", "postgre-sql"],
+  "author": "daviebatista",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
